--- a/css/main.css
+++ b/css/main.css
@@ -73,7 +73,7 @@ html {
     column-gap: 40px;
     font-size: 16px;
     font-weight: 500;
-    font-family: "Outfit", sans-serif; 
+    font-family: "Inter", sans-serif; 
 }
 
 .nav-list__link {
@@ -116,7 +116,7 @@ html {
 }
 
 .header__title strong {
-    font-size: 52px;
+    font-size: 50px;
     font-weight: 700;
 }
 
@@ -126,10 +126,18 @@ html {
 }
 
 .header-text {
+    max-width: 400px;
     margin-bottom: 40px;
     line-height: 1.333;
     font-size: 18px;
     font-weight: 500;
+    opacity: 0.7;
+    text-align: center;
+    word-break: keep-all;
+    letter-spacing: 0.2px;
+    hyphens: auto;
+    display: flex;
+    justify-self: center;
 }
 
 .header-text p + p {
@@ -380,6 +388,7 @@ html {
 .about__card {
     display: flex;
     flex-direction: column;
+    align-items: center;
     height: 440px;
     width: 263px;
     background-color: #09090B;
@@ -401,10 +410,10 @@ html {
 
 
 .about__photo {
-    width: 127px;
-    height: 147px;
-    border-radius: 2px;
-    margin: 51px 0 15px 67px;
+    border-radius: 4px;
+    display: flex;
+    justify-self: center;
+    margin-block: 50px 20px;
 }
 
 .about__text__content {
@@ -421,9 +430,9 @@ html {
 }
 .text__content {
     font-size: 18px;
-    opacity: 0.7;
+    opacity: 0.8;
     line-height: 1.4;
-    letter-spacing: 0.2px;
+    letter-spacing: 0.3px;
     word-break: keep-all;
     hyphens: auto;
     text-align: justify;
@@ -498,7 +507,7 @@ html {
 .about__card__footer {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    gap: 20px;
     color: #55555A;
     font-weight: 500;
     padding: 10px 20px;
